--- a/AndroidDemo/app/src/main/res/values/strings.xml
+++ b/AndroidDemo/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">WalletKit Demo</string>
-    <string name="performance_activity_name">Performance Benchmark">WalletKit Demo</string>
+    <string name="performance_activity_name">Performance Benchmark</string>
 </resources>
