refactor: refactor demo app

--- a/AndroidDemo/app/src/main/res/values/strings.xml
+++ b/AndroidDemo/app/src/main/res/values/strings.xml
@@ -1,4 +1,179 @@
 <resources>
     <string name="app_name">WalletKit Demo</string>
     <string name="performance_activity_name">Performance Benchmark</string>
+
+    <!-- Common actions -->
+    <string name="action_cancel">Cancel</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_handle_url">Handle URL</string>
+    <string name="action_add_wallet">Add Wallet</string>
+    <string name="action_import_wallet">Import wallet</string>
+    <string name="action_generate_wallet">Generate wallet</string>
+    <string name="action_send">Send</string>
+    <string name="action_disconnect">Disconnect</string>
+    <string name="action_details">Details</string>
+    <string name="action_copy_address">Copy address</string>
+    <string name="action_close">Close</string>
+    <string name="action_connect">Connect</string>
+    <string name="action_reject">Reject</string>
+    <string name="action_sign">Sign</string>
+    <string name="action_approve">Approve</string>
+    <string name="action_save">Save</string>
+    <string name="action_switch">Switch</string>
+    <string name="action_rename">Rename</string>
+    <string name="action_remove">Remove</string>
+
+    <!-- Network names -->
+    <string name="network_mainnet">Mainnet</string>
+    <string name="network_testnet">Testnet</string>
+
+    <!-- Quick actions card -->
+    <string name="quick_actions_title">Quick Actions</string>
+
+    <!-- Wallet screen -->
+    <string name="wallet_screen_title">TonWallet Demo</string>
+
+    <!-- Status header -->
+    <string name="status_updated_now">Updated just now</string>
+
+    <!-- Labels -->
+    <string name="label_wallet">Wallet</string>
+    <string name="label_wallet_address">Address</string>
+    <string name="label_balance">Balance</string>
+    <string name="label_url">URL</string>
+    <string name="label_wallet_version">Wallet Version</string>
+    <string name="label_wallet_name">Wallet name</string>
+    <string name="label_network">Network</string>
+
+    <!-- Wallet card -->
+    <string name="wallet_balance_placeholder">—</string>
+    <string name="wallet_details_address_label">Wallet Address</string>
+    <string name="wallet_details_version_label">Wallet Version</string>
+    <string name="wallet_details_public_key_label">Public Key</string>
+    <string name="wallet_details_transactions_title">Transactions</string>
+    <string name="wallet_details_transactions_total">%1$d total</string>
+    <string name="wallet_details_connected_apps">Connected dApps</string>
+    <string name="wallet_details_no_connected_apps">No connected dApps</string>
+
+    <!-- Wallet switcher -->
+    <string name="wallet_switcher_no_wallet">No Wallet</string>
+    <string name="wallet_switcher_select_wallet">Select a wallet</string>
+    <plurals name="wallet_switcher_wallet_count">
+        <item quantity="one">%d wallet</item>
+        <item quantity="other">%d wallets</item>
+    </plurals>
+    <string name="wallet_switcher_collapse">Collapse</string>
+    <string name="wallet_switcher_expand">Expand</string>
+    <string name="wallet_switcher_wallet_name_label">Wallet name</string>
+    <string name="wallet_switcher_remove_title">Remove Wallet?</string>
+    <string name="wallet_switcher_remove_message">Are you sure you want to remove this wallet?</string>
+    <string name="wallet_switcher_remove_warning">This will switch to another wallet.</string>
+    <string name="wallet_switcher_balance_format">%1$s TON</string>
+    <string name="wallet_switcher_active_badge">Active</string>
+
+    <!-- Sessions -->
+    <string name="sessions_title">Active Sessions</string>
+    <string name="sessions_empty_title">No active sessions</string>
+    <string name="sessions_empty_description">Use TON Connect to pair with a dApp.</string>
+
+    <!-- Wallets overview -->
+    <string name="wallets_title">Active Wallet</string>
+    <string name="wallets_empty_title">No wallets</string>
+    <string name="wallets_empty_description">Import or generate a wallet to get started.</string>
+    <string name="wallets_switcher_hint">Use the wallet switcher to view other wallets.</string>
+    <plurals name="wallets_count">
+        <item quantity="zero">None</item>
+        <item quantity="one">1 wallet</item>
+        <item quantity="other">%d wallets</item>
+    </plurals>
+
+    <!-- Event log -->
+    <string name="events_recent_title">Recent events</string>
+
+    <!-- Connect request -->
+    <string name="connect_request_title">Connect Request</string>
+    <string name="connect_request_requested_permissions">Requested permissions</string>
+    <string name="connect_request_select_wallet">Select wallet</string>
+
+    <!-- Sign request -->
+    <string name="sign_request_title">Sign Data Request</string>
+    <string name="sign_request_from_format">From: %1$s</string>
+    <string name="sign_request_wallet_format">Wallet: %1$s</string>
+    <string name="sign_request_type_format">Type: %1$s</string>
+    <string name="sign_request_data_hint">Data to Sign (tap to copy)</string>
+
+    <!-- Transaction request -->
+    <string name="transaction_request_title_direct">Confirm Transaction</string>
+    <string name="transaction_request_title_dapp">dApp Transaction Request</string>
+    <string name="transaction_request_from_format">From: %1$s</string>
+    <string name="transaction_request_requested_by_format">Requested by: %1$s</string>
+    <string name="transaction_request_valid_until_format">Valid until: %1$s</string>
+    <string name="transaction_request_to_label">To:</string>
+    <string name="transaction_request_amount_label">Amount:</string>
+    <string name="transaction_request_comment_label">Comment:</string>
+    <string name="transaction_request_payload_label">Payload:</string>
+    <string name="transaction_request_unknown_dapp">Unknown dApp</string>
+
+    <!-- Transaction detail -->
+    <string name="transaction_detail_status_label">Status</string>
+    <string name="transaction_detail_fee_label">Fee</string>
+    <string name="transaction_detail_from_label">From</string>
+    <string name="transaction_detail_to_label">To</string>
+    <string name="transaction_detail_comment_label">Comment</string>
+    <string name="transaction_detail_hash_label">Transaction Hash</string>
+    <string name="transaction_detail_logical_time_label">Logical Time</string>
+    <string name="transaction_detail_block_label">Block</string>
+    <string name="transaction_detail_view_explorer">View on Blockchain Explorer</string>
+
+    <!-- URL prompt dialog -->
+    <string name="url_prompt_title">Handle TON Connect URL</string>
+    <string name="url_prompt_placeholder">https:// or ton://</string>
+    <string name="url_prompt_paste_content_description">Paste from clipboard</string>
+    <string name="add_wallet_paste_supporting_text">Paste all words at once, or fill individually below</string>
+
+    <!-- Add wallet sheet -->
+    <string name="add_wallet_title">Add Wallet</string>
+    <string name="add_wallet_tab_import">Import</string>
+    <string name="add_wallet_tab_generate">Generate</string>
+    <string name="add_wallet_recovery_title">Recovery phrase (%1$d words)</string>
+    <string name="add_wallet_recovery_placeholder">word1 word2 word3 ... word24</string>
+    <string name="add_wallet_paste_label">Paste all 24 words here</string>
+    <string name="add_wallet_generate_description">Generate a demo wallet using a mock mnemonic phrase. Store it securely if you intend to reuse it.</string>
+    <string name="add_wallet_clipboard_content_description">Paste from clipboard</string>
+    <string name="add_wallet_version_default">Default</string>
+
+    <!-- Quick help -->
+    <string name="helper_comment_visibility">This message will be visible on the blockchain</string>
+
+    <!-- Transaction history -->
+    <string name="transactions_recent_title">Recent Transactions</string>
+    <string name="transactions_refreshing">Refreshing…</string>
+    <string name="transactions_empty_title">No transactions</string>
+    <string name="transactions_empty_description">Your transaction history will appear here.</string>
+    <string name="transactions_sent">Sent</string>
+    <string name="transactions_received">Received</string>
+    <string name="transactions_unknown_time">Unknown time</string>
+    <string name="transactions_amount_outgoing">-%1$s TON</string>
+    <string name="transactions_amount_incoming">+%1$s TON</string>
+
+    <!-- Send transaction -->
+    <string name="send_title">Send TON</string>
+    <string name="send_from_label">From</string>
+    <string name="send_balance_format">Balance: %1$s TON</string>
+    <string name="send_recipient_label">Recipient Address</string>
+    <string name="send_recipient_placeholder">EQ... or UQ...</string>
+    <string name="send_recipient_error">Invalid TON address</string>
+    <string name="send_amount_label">Amount (TON)</string>
+    <string name="send_amount_placeholder">0.00</string>
+    <string name="send_amount_error">Invalid amount</string>
+    <string name="send_amount_insufficient">Insufficient balance</string>
+    <string name="send_comment_label">Comment (Optional)</string>
+    <string name="send_comment_placeholder">Add a message...</string>
+    <string name="send_button_loading">Sending...</string>
+    <string name="send_button_default">Send Transaction</string>
+    <string name="send_info_message">This will create and send a transaction from your wallet. You will be asked to approve it before it\'s sent to the network.</string>
+    <string name="send_back_content_description">Back</string>
+
+    <!-- Status messages -->
+    <string name="status_loading_wallets">Loading wallets…</string>
 </resources>
