feat: integrate WebView browser with TonConnect bridge
- Replace internal browser with WebView extension
- Route browser events through bridge.ts to WalletKit handler
- Add TonConnect deep link interception and handling
- Test dApp connection via internal browser

--- a/AndroidDemo/app/src/main/res/values/strings.xml
+++ b/AndroidDemo/app/src/main/res/values/strings.xml
@@ -46,6 +46,10 @@
     <string name="label_network">Network</string>
     <string name="label_wallet_interface_type">Wallet Interface Type</string>
 
+    <!-- Browser -->
+    <string name="browser_title">dApp Browser</string>
+    <string name="browser_loading">Loading…</string>
+
     <!-- Wallet Interface Types -->
     <string name="interface_type_mnemonic">Mnemonic</string>
     <string name="interface_type_mnemonic_desc">Standard wallet</string>
